kube/daemon_set.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: ingress-controller
spec:
  type: NodePort
  selector:
    app: registry
  ports:
  - port: 5000
    nodePort: 30001
    targetPort: 5000
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset
  namespace: ingress-controller
  labels:
    name: daemon
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      name: registry
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 5000
