kube/development.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-controller
  name: service
  labels:
    app: service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: docs
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-controller
  name: deployment
  labels:
    app: deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docs

  template:
    metadata:
      name: docs
      labels:
        app: docs
    spec:
      volumes:
      - name: myvolume
        persistentVolumeClaim:
          claimName: pvc

      containers:
        - name: docs
          image: 172.16.10.101:30001/docs:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: "/data"
              name: myvolume
