kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
  namespace: ingress-controller
  labels:
    name: myingress
spec:
  rules:
  - host: congnt.test
    http:
      paths:
        - path: '/'
          backend:
            serviceName: service
            servicePort: 80
